| Bug #4586 | System restart fails after graceful shutdown | ||
|---|---|---|---|
| Submitted: | 17 Jul 2004 19:18 | Modified: | 10 Aug 2004 10:55 |
| Reporter: | Johan Andersson | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S1 (Critical) |
| Version: | mysql 4.1 bk src | OS: | Linux (RH9) |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[17 Jul 2004 19:18]
Johan Andersson
[5 Aug 2004 18:04]
Jonas Oreland
Hi, I haven't reproduced the exact error that you stated. But I fixed 3 bugs in SR so that testSystemRestart -n SR_FULLDB now works flawlessly, for me :-)
[10 Aug 2004 10:55]
Jonas Oreland
Note, if index gets full problem still exists, but data should work
